--- a/ERPWeb/Views/AgroConfiguration/_ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ProductCommision.cshtml
@@ -10,7 +10,7 @@
         <thead class="btn-dark">
             <tr class="text-center">
                 <td style="vertical-align:middle">#Sl</td>
-                <td style="vertical-align:middle">Year</td>
+                <td style="vertical-align:middle" class="hide">Year</td>
                 <td style="vertical-align:middle">Product Name</td>
                 <td style="vertical-align:middle">Credit(%)</td>
                 <td style="vertical-align:middle">Cash(%)</td>
@@ -35,7 +35,7 @@
             <tr>
                 <td class="text-center">@sl</td>
 
-                <td class="text-center">@item.CalenderYear</td>
+                <td class="text-center hide">@item.CalenderYear</td>
                 <td class="text-center">@item.FinishGoodProductName</td>
                 <td class="text-center hide">@item.FinishGoodProductId</td>
                 <td class="text-center">@item.Credit</td>
