--- a/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
@@ -11,7 +11,7 @@
             <tr class="text-center">
                 <td style="vertical-align:middle">#Sl</td>
                 <td style="vertical-align:middle">Invoice No</td>
-                <td style="vertical-align:middle">Product Name</td>
+                @*<td style="vertical-align:middle">Product Name</td>*@
                 <td style="vertical-align:middle">Payment Method</td>
                 <td style="vertical-align:middle">Total Commission</td>
                 <td style="vertical-align:middle">Entry Date</td>
@@ -31,7 +31,7 @@
                         <td class="text-center">@sl</td>
 
                         <td class="text-center">@item.InvoiceNo</td>
-                        <td class="text-center">@item.FinishGoodProductName</td>
+                        @*<td class="text-center">@item.FinishGoodProductName</td>*@
                         <td class="text-center ">
                             <span class="@badge">@item.PaymentMode</span>
                         </td>
