--- a/ERPWeb/Views/AgroConfiguration/_RawmatiralPurchaseDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_RawmatiralPurchaseDetails.cshtml
@@ -46,7 +46,7 @@
                 <td class="text-center">@item.UnitName</td>
                 <td class="text-center">@item.UnitPrice</td>
                 <td class="text-center">@item.SubTotal</td>
-                <td class="text-center">@item.StockDate</td>
+                <td class="text-center">@item.StockDate.Value.ToString("dd.MMM.yyyy")</td>
 
             </tr>
         }
