--- a/ERPWeb/Views/AgroConfiguration/_PaymentHistoryDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_PaymentHistoryDetails.cshtml
@@ -18,8 +18,8 @@
         <td style="width:20%"><b>@info.TotalAmount</b></td>
         <td style="width:13%">Paid Amount</td>
         <td style="width:20%"><b>@info.PaidAmount</b></td>
-        <td style="width:13%">Due Amount</td>
-        <td style="width:20%"><b>@info.DueAmount</b></td>
+        <td style="width:13%" class="hide">Due Amount</td>
+        <td style="width:20%" class="hide"><b>@info.DueAmount</b></td>
     </tr>
     }
 </table>
